# anti-pyinstaller

./: .gitignore  README.md  pyproject.toml
anti_pyinstaller/: __init__.py  detector.py  extractor.py  pyc_fixer.py
anti_pynstaller/: __init__.py  decompiler.py  disasm.py  extractor.py
src/: __init__.py  common.py  detector.py  disasm.py  extractor.py  logger.py  pyc_fixer.py  reconstruct.py
