[project]
name = "anti-pynstaller"
version = "0.1.0"
description = "Automated PyInstaller executable extractor"
authors = [{name = "anti-pynstaller"}]
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[project.scripts]
anti-pynstaller = "anti_pynstaller:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["anti_pynstaller*"]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"